--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,9 @@
 
 version: 0.1
 phases:
+  install:
+    runtime-versions:
+      java: openjdk11
   build:
     commands:
       - echo Build started on `date`
